...
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/patient_username"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_white_border"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/icon_user"
...
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/meditrackr_logo" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_white_border"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/icon_phone"
...
        android:textColor="@color/colorPrimaryBlack"
        android:textColorHint="#999999"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/patient_email" />

    <EditText
        android:id="@+id/patient_email"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginTop="12dp"
...
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="Select Role"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/Patient"
        app:layout_constraintStart_toStartOf="@+id/CareProvider"
        app:layout_constraintTop_toBottomOf="@+id/phone_number" />

    <TextView
        android:id="@+id/display_careprovider"
        android:layout_width="wrap_content"
...
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/CareProvider"
        app:layout_constraintTop_toBottomOf="@+id/display_patient"
        app:srcCompat="@drawable/patient" />

    <Button
        android:id="@+id/signup_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/gradient_main"
        android:text="CREATE ACCOUNT"
...
