...
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/record_title_field"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="40dp"
...
                    android:singleLine="true"
                    android:textColor="@color/colorPrimaryBlack"
                    android:textColorHint="@color/editTextHint"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/record_description_field"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="40dp"
...

                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/add_record_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="16dp"
...
