...
        app:layout_constraintEnd_toStartOf="@+id/time"
        app:layout_constraintStart_toEndOf="@+id/problem_image"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/problem_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
...
        android:id="@+id/problem_edit_button"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/white"
        android:scaleType="center"
        app:layout_constraintBottom_toTopOf="@+id/problem_delete_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:materialIcon="folder_edit"
        app:materialIconColor="#000"
        app:materialIconSize="30dp" />

    <net.steamcrafted.materialiconlib.MaterialIconView xmlns:app="http://schemas.android.com/apk/res-auto"
...
